--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<a href="https://twitter.com/share" class="twitter-share-button" data-related="regionalplan">Tweet</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 		</p>
-		<p>This map was developed by a student studio from Hunter College's <a href="http://www.hunteruap.org/"><b>Urban Planning program</b></a>. Our studio researched existing trails within the catchment of the <a href="http://www.rpa.org/">Regional Plan Association</a> and proposed guidelines and offered resources for developing future trails.</p>
+		<p>This map was developed by a student studio from Hunter College's <a href="http://www.hunteruap.org/"><b>Urban Planning program</b></a>. Our studio researched existing trails within the catchment of the <a href="http://www.rpa.org/"><b>Regional Plan Association</b></a> and proposed guidelines and offered resources for developing future trails.</p>
 	</div>
 	<div id="map"></div>
 	<div id="info-pane" class="leaflet-bar">
